@@ -36,6 +36,7 @@ OVERALL TODO
    Add git tag r-1 when switching
    
 * v0.0.5-251 (19 Oct. 2016 - ???) SLOC ??? FT ???:?? UT ?
-- (3) Start to add a logo to main menu
+- (4) Add a CEGUI overlay to draw the logo
+- Start to add a logo to main menu
 - Fix the configuration cancel button segfault
 - Make the main menu's exit button exit the game
